k8s/guardians/monitoring/alertmanager/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: prometheus-operator-alertmanager
  labels:
    app.kubernetes.io/name: prometheus-operator-alertmanager
    app.kubernetes.io/instance: prometheus-operator
  namespace: monitoring
spec:
  ports:
    - name: web
      port: 9093
      protocol: TCP
  selector:
    app: alertmanager
    alertmanager: prometheus-operator-alertmanager
  type: ClusterIP
