k8s/guardians/monitoring/alertmanager/ingressRoute.yml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-operator-alertmanager-http
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-operator-alertmanager
    app.kubernetes.io/instance: prometheus-operator
spec:
  entrypoints:
    - http
  routes:
    - match: Host(`alerts.metrics.hannahs.family`)
      kind: Rule
      middlewares:
        - name: https-redirect
          namespace: default
      services:
        - name: prometheus-operator-alertmanager
          port: 9093

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-operator-alertmanager-https
  namespace: monitoring
  labels:
    app.kubernetes.io/name: prometheus-operator-alertmanager
    app.kubernetes.io/instance: prometheus-operator
spec:
  entrypoints:
    - https
  routes:
    - match: Host(`alerts.metrics.hannahs.family`)
      kind: Rule
      services:
        - name: prometheus-operator-alertmanager
          port: 9093
  tls:
    certResolver: default
